force-app/main/default/objects/DHA_Study_Result__c/fields/DHA_Class_Assignment__c.field-meta.xml
<CustomField>
    <fullName>DHA_Class_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DHA Class Assignment</label>
    <referenceTo>DHA_Class_Assignment__c</referenceTo>
    <relationshipLabel>DHA Study Results</relationshipLabel>
    <relationshipName>DHA_Study_Results</relationshipName>
    <type>Lookup</type>
</CustomField>