force-app/main/default/objects/DHA_Study_Result__c/fields/Final_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Score__c</fullName>
    <formula>(IF(ISNULL(Score_1__c),0,Score_1__c) + IF(ISNULL(Score_2__c),0,Score_2__c) + IF(ISNULL(Score_3__c),0,Score_3__c)) / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>