force-app/main/default/objects/DHA_Study_Result__c/fields/Is_Latest__c.field-meta.xml
<CustomField>
    <fullName>Is_Latest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Latest</label>
    <type>Checkbox</type>
</CustomField>