force-app/main/default/objects/DHA_Study_Result__c/fields/Score_1__c.field-meta.xml
<CustomField>
    <fullName>Score_1__c</fullName>
    <label>Score 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>