force-app/main/default/objects/DHA_Study_Result__c/fields/Score_3__c.field-meta.xml
<CustomField>
    <fullName>Score_3__c</fullName>
    <label>Score 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>